// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProposalVoteButton /> renders viewer has not voted 1`] = `
Array [
  <div
    className="sc-bcXGCL gHoLKQ toasts-container toasts-container--top"
  />,
  <button
    className="sc-bcXGCL sc-gGvGpy lilXhM jrAhSN cap-button mr-10 proposal__button__vote btn btn-success  "
    disabled={false}
    id="buttonID"
    onClick={[Function]}
    type="button"
  >
    <i
      className="cap cap-hand-like-2 mr-5"
    />
    global.vote.for
  </button>,
]
`;

exports[`<ProposalVoteButton /> renders viewer has voted 1`] = `
Array [
  <div
    className="sc-bcXGCL gHoLKQ toasts-container toasts-container--top"
  />,
  <button
    className="sc-bcXGCL sc-gGvGpy lilXhM jrAhSN cap-button mr-10 proposal__button__vote btn btn-success  "
    disabled={false}
    id="buttonID"
    onClick={[Function]}
    type="button"
  >
    <i
      className="cap cap-hand-like-2 mr-5"
    />
    voted
  </button>,
]
`;

exports[`<ProposalVoteButton /> renders viewer has voted and hovering 1`] = `
Array [
  <div
    className="sc-bcXGCL gHoLKQ toasts-container toasts-container--top"
  />,
  <button
    className="sc-bcXGCL sc-gGvGpy lilXhM jrAhSN cap-button mr-10 proposal__button__vote btn btn-danger  "
    disabled={false}
    id="buttonID"
    onClick={[Function]}
    type="button"
  >
    <i
      className="cap cap-hand-like-2 mr-5"
    />
    cancel
  </button>,
]
`;

exports[`<ProposalVoteButton /> renders viewer has voted and hovering with ranking 1`] = `
Array [
  <div
    className="sc-bcXGCL gHoLKQ toasts-container toasts-container--top"
  />,
  <button
    className="sc-bcXGCL sc-gGvGpy lilXhM jrAhSN cap-button mr-10 proposal__button__vote btn btn-danger  "
    disabled={false}
    id="buttonID"
    onClick={[Function]}
    type="button"
  >
    <i
      className="cap cap-hand-like-2 mr-5"
    />
    cancel
  </button>,
]
`;
